# Ryzers

./: .gitignore  LICENSE  README.md  roscon_setup.sh  setup.py
.github/workflows/: gh-deploy.yml
docs/: _config.yml  _toc.yml  contributing.md  installation.md  intro.md  license.md  packages.md  usage.md
megadockers/gpu/: Dockerfile.gpu  README.md  merge_dockerfile.py  run.sh  test_amdgputop.sh  test_rclpy.sh  test_smolvla.py  test_smolvla.sh
megadockers/gpu/notebooks/: 0_Overview.ipynb  0_overview.ipynb  1_gpu_utilities.ipynb  2_running_llms.ipynb  3_robot_policies.ipynb  3_vlm_ros_integration.ipynb  4_robot_policies.ipynb  4_vlm_ros_integration.ipynb  test.hip  utils.py
megadockers/gpu/notebooks/hip/: test.hip
megadockers/gpu/notebooks/vlm_ros/: CMakeLists.txt  package.xml  setup.py
megadockers/gpu/notebooks/vlm_ros/srv/: VLMQuery.srv
megadockers/gpu/notebooks/vlm_ros/vlm_ros/: vlm_service.py
megadockers/npu/: Dockerfile.npu  README.md  build.sh  entrypoint.sh  run.sh  test_cvml.sh  test_npueval.sh  test_xdna.sh
megadockers/npu/notebooks/: 0_Overview.ipynb  1_xdna_driver.ipynb  2_ryzenai_cvml_library.ipynb  3_cvml_ros.ipynb  depth_estimation_gpu.py  depth_estimation_gpu_midas.py
megadockers/npu/notebooks/cvml_ros/: CMakeLists.txt
megadockers/npu/notebooks/cvml_ros/launch/: depth_estimation.launch.py  face_detection.launch.py  face_mesh.launch.py
megadockers/npu/notebooks/cvml_ros/scripts/: video_publisher.py
megadockers/npu/notebooks/cvml_samples/: CMakeLists.txt  build.sh  depth_estimation_cpu.cpp  face_detection_cpu.cpp
megadockers/npu/notebooks/ryzen_ai_cvml/: CMakeLists.txt  package.xml
ryzers/: __init__.py  builder.py  configs.py  entrypoint.py  packages.py  runner.py  ryzer.py
skills/new-ryzer/: SKILL.md
tests/: build_and_test_all_parallel.sh  check_package_configs.sh
(+11 files in other folders)
